# cog

./: .env.example  .gitignore  .gitnexusignore  .mcp.json  AGENTS.md  CLEANUP_SUMMARY.md  CLI_AI_COMMANDS.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  Dockerfile  FEATURES_IMPLEMENTED.md  FINAL_COMPLETE.md  KILLER_FEATURES.md  LICENSE  QUICKSTART.md  README.md  V1.1_FEATURES.md  WEBSITE_UPDATE_GUIDE.md  cog.yaml  cog.yaml.example  install_cogos.py  package-lock.json  pyproject.toml
cog/: .gitignore  BUILD_20_MODULES.sh  BUILD_50_EXPERTS.sh  README.md  __init__.py  cache.py  chunk_index.py  cli.py  cog_module.py  cogos_auto.py  cogos_auto_integration.py  cogos_cli.py  config.py  demo_maxed_out.sh  demo_super_intelligence.py  enhanced_planner.py  enhanced_self_improvement.py  generate_all_modules.py  generate_modules.py  kernel.py  mcp_server.py  multi_agent.py  permissions.py  pyproject.toml  quick_start.py  requirements.txt  setup.sh
cog/autonomous_fixer/: fixer.py
cog/codebase_intelligence/: intel.py
cog/cog/: AGENTS.md  PRIORITY_MODULES.md  __init__.py  agent.py  cli.py  cog_logger.py  cogos.py  config.py  create_module.sh  document_writer.py  enhanced_planner.py  hierarchical_planner.py  kernel.py  mcp_server.py  module_loader.py  multi_agent.py  permissions_ui.py  planner.py  research.py  (+3 more)
cogos-site/: DEPLOY.md  README.md  demo.html  deploy.sh  docs.html  examples.html  index.html  styles.css
docs/: AUTO_INTEGRATION_START_HERE.md  COMPLETE_SUMMARY.md  README.md  START_HERE.md
docs-site/: index.html  package.json  styles.css
web-ui/: README.md  start.sh
(+222 files in other folders)
