[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogos"
version = "0.1.0"
description = "Cognitive OS - A modular, community-driven cognitive runtime system"
requires-python = ">=3.11"
dependencies = [
    "mem0ai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.80.0",
    "pyyaml>=6.0",
]

[project.scripts]
cog = "cog.cli:main"

[tool.setuptools.packages.find]
where = ["cog"]

[tool.setuptools.package-dir]
"" = "cog"

[tool.pytest.ini_options]
testpaths = ["cog/tests"]
